# if1007-microservices

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  mail_manager.py  main.py  main_publisher.py  producer.py  producer_dummy.py  publisher_api.py  pyproject.toml  queue_manager.py
.github/workflows/: test.yaml
app/: app.py
consumer/: consumer.py
metrics/: topics.py
producer/: producer.py
prometheus/: prometheus.yaml
schemas/: mail_params.py  queue_payload.py  recipient.py  template.py
tests/: response_factory.py  test_mail_manager.py  test_queue_payload.py
